<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.DateFrameActivity"
    tools:showIn="@layout/activity_date_frame">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_vertical|center"
            android:text="Data początkowa"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical|center"
            android:text="  /  /    "
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <CheckBox
            android:id="@+id/ignore_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ignoruj datę początkową"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_vertical|center"
            android:text="Data końcowa"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical|center"
            android:text="  -  -    "
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <CheckBox
            android:id="@+id/ignore_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ignoruj datę końcową"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Potwierdź"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.317" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>