<resources>
    <string name="app_name">GOT</string>
    <string name="change_panel">Zmień panel</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_main">Mobilna GOT</string>
    <string name="title_activity_setup_walk">Wybierz rodziaj trasy</string>
    <string name="title_activity_leader_main">Mobilna GOT</string>
    <string name="title_activity_verification">Rozpatrywanie zgłoszenia</string>
    <string name="title_activity_mountain_group">Filtrowanie grup górskich</string>
    <string name="title_activity_date_frame">Ustawianie przedziału dat</string>
    <string name="title_activity_gallery">Galeria</string>
    <string name="ip">192.168.0.103</string>
    <string name="ranking_start_date">ranking_start_date</string>
    <string name="ranking_end_date">ranking_end_date</string>
    <string name="ranking_mountain_group_ids">ranking_mountain_group_ids</string>
    <string name="to_verify_entry_json">to_verify_entry_json</string>
    <string name="next_verification">next_verification</string>
    <string name="choosePunktTitle">Wybierz punkt poczatkowy</string>
    <string name="chooseTrasaTitle">Wybierz odcinek trasy</string>
    <string name="title_activity_wedrowka">WedrowkaActivity</string>
    <string name="change_ip">Zmień IP</string>
    <string name="ip_key">Zmień IP</string>
</resources>
