...

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/ranking_button"
            android:layout_width="192dp"
            android:layout_height="64dp"
            android:text="Ranking"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="275dp" />

...
