...
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="Potwierdź"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
