...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zatwierdz_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Zatwierdź"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" />
...
